Update and rename 0_课后作业.md to 陈喆_课后作业.md

--- a/1.解锁通往Web3.0之门/陈喆_课后作业.md
+++ b/1.解锁通往Web3.0之门/陈喆_课后作业.md
@@ -10,15 +10,16 @@
 ### 开放式问答：
 
 1. web2.0已经繁华至此，我们为什么需要web3.0?
-
+个人认为，最主要web2.0所产生的数据基于中心化，数据太集中，隐私安全都得不到保证。web3.0是去中心化，不信赖某一机构或某些人所操控，真正做到冲浪自由。这是趋势，很高兴我能见证web3.0的诞生。
 
 2. dApp作为web3.0时代的主要应用，相较于app有哪些优势？其能否为web2.0发展中存在的问题提供可解决性方案，或者带来什么样的变革？
-
+dAPP就是方便用户更好使用web3.0的一个软件，最主要是要基于web3.0的去中心化，用户数据信息都通过加密在链上按程序自主运行。用户信息泄露的事件将不复存在。
 
 3. 2021年，去中心化自治社区（DAO）概念因为宪法DAO而红极一时，您认为一个良性发展的DAO应该具备哪些特质？
-
+我认为，第一肯定是要去中心化，第二是民主性，所有社区用户都能参与进来，第三是要有一个核心的通证代币来维持团结所有的用户。
 
 4. 2021年作为NFT元年，在艺术品、游戏赛道掀起了狂潮，你怎么看待这种现象？
-
+NFT是势在必行，不过在2021年掀起了狂潮，我认为炒作成分比较大，如果没有一个象IPFS一样的去中心化存储作为底层，21年所炒作的NFT根本不算是真正属于个人持有的NFT。
 
 5. 分布式存储作为web3.0的基础设施，成功落地，将会赋能哪些行业? 并对当前的互联网带来哪些变革？
+非常期待，分布式存储IPFS成功落地，将会赋能哪些行业? 我想这个问题应该问，哪些行业能离开这个web3.0的基础设施？？现在大数据时代，分布式存储的安全，快速，加上智能合约，对当前的互联网将是一个质的飞跃，AI智能，无人机，真正的大数据元宇宙将会到来。。
